[project]
name = "segment_anything_a100"
description = "Heavily optimized A100 GPU fork of ComfyUI Segment Anything using BF16 precision, VRAM Locking, and Zero-Copy GPU processing for massive batch processing."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["segment_anything", "timm", "addict", "yapf"]

[project.urls]
Repository = "https://github.com/huyl3-cpu/comfyui_segment_anything_a100"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/huyl3-cpu/comfyui_segment_anything_a100/wiki"
"Bug Tracker" = "https://github.com/huyl3-cpu/comfyui_segment_anything_a100/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui_segment_anything_a100"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

